--- a/gui/httpServer/views/index.pug
+++ b/gui/httpServer/views/index.pug
@@ -1,5 +1,20 @@
-extends layout
+doctype html
+html(lang='en')
+  head
+    meta(charset='utf-8')
+    meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
+    meta(name='description', content='')
+    meta(name='author', content='Nam Tran')
+    link(rel='icon', href='/favicon.ico')
 
-block content
-  h1= title
-  p Welcome to #{title}
+    title STM DAQ Slow Control
+
+  body
+    button#btnStop.btn.btn-fill.btn-danger Stop
+    button#btnInternal.btn.btn-block.btn-info Internal
+    select#internalMode.combobox(name='internalMode')
+      option(value="Single") Single
+      option(value="1 Hz") 1 Hz
+      option(value="5 Hz") 5 Hz
+      option(value="10 Hz") 10 Hz
+      option(value="Burst", selected="") Burst
